@@ -563,6 +563,13 @@ public class FileComparer {
                         Date s3ObjectLastModified = null;
                         String metadataLocalFileDate = (String) s3Object.getMetadata(
                             Constants.METADATA_JETS3T_LOCAL_FILE_DATE);
+                        
+                        // Try to retrieve the date using the deprecated metadata name
+                        if (metadataLocalFileDate == null) {
+                            metadataLocalFileDate = (String) s3Object.getMetadata(
+                                Constants.METADATA_JETS3T_LOCAL_FILE_DATE_DEPRECATED);
+                        }
+                        
                         if (metadataLocalFileDate == null) {
                             // This is risky as local file times and S3 times don't match!
                             log.warn("Using S3 last modified date as file date. This is not reliable " 
